--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "framer-motion": "^11.0.22",
     "next": "14.1.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-feather": "^2.0.10",
+    "react-icons": "^5.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
